--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>单词拼写练习</title>
+    <title>MorphoMaster</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
-  <body class="dark-mode">
-    <!-- <body> -->
+  <!-- <body class="dark-mode"> -->
+    <body>
     <div class="container">
       <div class="progress-bar">
         <div class="progress" id="progress"></div>
@@ -43,7 +44,9 @@
     </div>
 
     <!-- Add this button outside the container -->
-    <div id="themeToggle">&#9788;</div>
+    <div id="themeToggle">&#9790;</div>
+
+    <footer>©️<a target="_blank" href="https://music.163.com/#/user/home?id=1394582249">Jason Liu</a></footer>
 
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <script src="index.js"></script>
