--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MorphoMaster</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <!-- <body class="dark-mode"> -->
-    <body>
-    <div class="container">
+  <body>
+    <main class="container">
+      <!-- 进度条区域 -->
       <div class="progress-bar">
         <div class="progress" id="progress"></div>
       </div>
 
+      <!-- 单词显示区域 -->
       <div class="word-display" id="currentWord">...</div>
-
       <div class="ipa-display" id="wordIPA">...</div>
-
       <div class="definition" id="wordDefinition">...</div>
 
+      <!-- 输入区域 -->
       <div id="pluralInputGroup" class="input-group">
         <label for="pluralInput">复数形式：</label>
         <input type="text" id="pluralInput" />
@@ -28,28 +28,34 @@
       <div id="verbInputs" class="input-group hidden">
         <label for="pastInput">过去式：</label>
         <input type="text" id="pastInput" />
-
         <label for="pastParticipleInput">过去分词：</label>
         <input type="text" id="pastParticipleInput" />
       </div>
 
-      <button onclick="checkAnswers()" id="submitBtn">提交</button>
-
+      <!-- 按钮区域 -->
+      <button id="submitBtn">提交</button>
       <div class="navigation-buttons">
-        <button onclick="previousWord()">上一个</button>
-        <button onclick="nextWord()">下一个</button>
+        <button id="previousBtn">上一个</button>
+        <button id="nextBtn">下一个</button>
       </div>
 
+      <!-- 结果反馈区域 -->
       <div id="result" class="result hidden"></div>
-    </div>
+    </main>
 
-    <!-- Add this button outside the container -->
+    <!-- 主题切换按钮 -->
     <div id="themeToggle">&#9790;</div>
 
-    <footer>©️ <a target="_blank" href="https://music.163.com/#/user/home?id=1394582249">Jason Liu</a></footer>
+    <footer>
+      ©️
+      <a target="_blank" href="https://music.163.com/#/user/home?id=1394582249"
+        >Jason Liu</a
+      >
+    </footer>
 
+    <!-- 引入必要的脚本 -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-    <script src="index.js"></script>
-    <!-- <script src="js/confetti.js"></script> -->
+    <script src="js/main.js" type="module"></script>
+    <!-- <script src="index.js"></script> -->
   </body>
 </html>
