Optimize CSS animations and simplify HTML structure

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <main class="container flex-center-column gap-20 flex">
+    <main class="container flex-center-column gap-20">
       <!-- 进度条区域 -->
       <div class="progress-bar">
         <div class="progress" id="progress"></div>
       </div>
 
       <!-- 单词显示区域 -->
-      <div class="word-area flex-center-column gap-10 flex">
+      <div class="word-area flex-center-column gap-10">
         <div class="word-display" id="currentWord">...</div>
         <div class="ipa-display" id="wordIPA">...</div>
         <div class="definition" id="wordDefinition">...</div>
@@ -36,7 +36,7 @@
       </div>
 
       <!-- 按钮区域 -->
-      <div class="button-area flex-center-column flex gap-10 width-100pct-inner">
+      <div class="button-area flex-center-column gap-10 width-100pct-inner">
         <button id="submitBtn">OK</button>
         <div class="navigation-buttons gap-10 flex-center-row">
           <button id="previousBtn">←</button>
