--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <title>MorphoMaster</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="css/theme.css" />
+    <link rel="stylesheet" href="css/var.css" />
     <link rel="stylesheet" href="css/utils.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/index.css" />
-
-    <link
-      rel="preload"
-      href="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"
-      as="script" />
   </head>
   <body>
     <main class="container flex-center-column gap-20">
@@ -79,7 +74,6 @@
     </footer>
 
     <!-- 引入必要的脚本 -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script> -->
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
