--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MorphoMaster</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="css/var.css" />
     <link rel="stylesheet" href="css/utils.css" />
@@ -14,9 +14,11 @@
   <body>
     <main class="container flex-center-column gap-20">
       <!-- 进度条区域 -->
-      <div id="progressText" class="progress-text">.../...</div>
-      <div class="progress-bar">
-        <div class="progress" id="progress"></div>
+      <div class="progress-area flex-center-column gap-20 width-100pct-inner">
+        <div id="progressText" class="progress-text">.../...</div>
+        <div class="progress-bar">
+          <div class="progress" id="progress"></div>
+        </div>
       </div>
 
       <!-- 单词显示区域 -->
