--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
     <title>MorphoMaster</title>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="css/vars.css" />
-    <link rel="stylesheet" href="css/utils.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <!-- <div id="loading" class="loading-overlay">
-      <div class="loading-spinner"></div>
-    </div> -->
-
     <main class="container flex-center-column gap-20">
       <!-- 进度条区域 -->
       <div class="progress-area flex-center-column gap-20 width-100pct-inner">
