fix: add button types and titles for better accessibility

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
       <!-- 按钮区域 -->
       <div class="button-area flex-center-column gap-10 width-100pct-inner">
-        <button id="submitBtn">OK</button>
+        <button id="submitBtn" type="button" title="Enter">OK</button>
         <div class="navigation-buttons gap-10 flex-center-row">
-          <button id="previousBtn">←</button>
-          <button id="nextBtn">→</button>
+          <button id="previousBtn" type="button" title="Alt+l">←</button>
+          <button id="nextBtn" type="button" title="Alt+h">→</button>
         </div>
       </div>
 
@@ -65,10 +65,12 @@
     </main>
 
     <!-- 主题切换按钮 -->
-    <div id="themeToggle">&#9790;</div>
+    <div id="themeToggle" title="偷天换日">&#9790;</div>
 
     <footer>
       ©️
+      <a target="_blank" href="https://www.deepseek.com/">DeepSeek</a> ·
+      <a target="_blank" href="https://kimi.moonshot.cn/">Kimi</a> ·
       <a target="_blank" href="https://music.163.com/#/user/home?id=1394582249"
         >Jason Liu</a
       >
