Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'orign/master'.

Changes to be committed:
	modified:   .gitignore
	deleted:    assets/img/dark-mode.png
	deleted:    assets/img/light-mode.png
	modified:   css/normalize.css
	modified:   data/words_Upgrade2Bach.json
	modified:   index.html
	deleted:    intros/README.md
	deleted:    intros/test1.md
	deleted:    intros/test2.md
	deleted:    intros/test3.md
	deleted:    "intros/test3\346\227\240\345\274\225\347\224\250.md"
	deleted:    intros/test4.md
	deleted:    "intros/trae\350\257\246\347\273\206\347\211\210.md"
	deleted:    intros/tree.md
	modified:   js/main.js
	modified:   js/modules/confetti.js

--- a/index.html
+++ b/index.html
@@ -64,15 +64,14 @@
     </main>
 
     <!-- 主题切换按钮 -->
-    <div class="btn-pressable themeToggle" id="themeToggle" title="偷天换日">
+    <!-- <div class="btn-pressable themeToggle" id="themeToggle" title="偷天换日"> -->
+    <div class="btn-pressable themeToggle" id="themeToggle" title="Alt+T">
       <i class="iconfont icon-sun"></i>
       <i class="iconfont icon-moon"></i>
     </div>
 
     <footer>
       <i class="iconfont icon-copyright"></i>
-      <a target="_blank" href="https://www.deepseek.com/">DeepSeek</a> ·
-      <a target="_blank" href="https://kimi.moonshot.cn/">Kimi</a> ·
       <a target="_blank" href="https://music.163.com/#/user/home?id=1394582249"
         >Jason Liu</a
       >
@@ -84,10 +83,18 @@
         <i class="iconfont icon-source-code"></i>
       </div>
       <div class="sub-buttons">
-        <a title="GitHub" href="https://github.com/bigmanBass666/morphomaster" target="_blank" class="sub-button btn-pressable">
+        <a
+          title="GitHub"
+          href="https://github.com/bigmanBass666/morphomaster"
+          target="_blank"
+          class="sub-button btn-pressable">
           <i class="iconfont icon-github"></i>
         </a>
-        <a title="Gitee" href="https://gitee.com/bigmanBass666/morphomaster" target="_blank" class="sub-button btn-pressable">
+        <a
+          title="Gitee"
+          href="https://gitee.com/bigmanBass666/morphomaster"
+          target="_blank"
+          class="sub-button btn-pressable">
           <i class="iconfont icon-gitee"></i>
         </a>
       </div>
